<resources>
    <string name="app_name">Ajuda+</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floactingActionButton">Ir para a tela de postagem</string>
    <string name="editPostagemButton">Ediar a postagem</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Criar uma conta</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cadastro">Cadastrar</string>
    <string name="confirmar">Confirmar Senha</string>
    <string name="excluir">Excluir</string>


</resources>